objects/Contract_Reviewing__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Value_100K_Comments__c</fullName>
        <label>AR Level 4 Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Value_100k__c</fullName>
        <label>Accounting Team Level 4 Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courtney Hansen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value_100k_review_Ok__c</fullName>
        <label>Accounting Team Level 4 Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value_50K_Comments__c</fullName>
        <label>AR Level 3 Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Value_50k__c</fullName>
        <label>Accounting Team Level 3 Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abhishek Oberoi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Value_50k_review_Ok__c</fullName>
        <label>Accounting Team Level 3 Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Year__c</fullName>
        <formula>TEXT(Opportunity__r.Deal_Year__c)</formula>
        <label>Deal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Classification_Canx__c</fullName>
        <label>Error Classification Canx</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName># of Contract Years</fullName>
                </value>
                <value>
                    <fullName>1st Invoice #</fullName>
                </value>
                <value>
                    <fullName>1st Invoice Amount</fullName>
                </value>
                <value>
                    <fullName>1st Invoice Amt to be backed out</fullName>
                </value>
                <value>
                    <fullName>1st Invoice Date</fullName>
                </value>
                <value>
                    <fullName>1st Type of Invoice</fullName>
                </value>
                <value>
                    <fullName>2nd Invoice #</fullName>
                </value>
                <value>
                    <fullName>2nd Invoice Amount</fullName>
                </value>
                <value>
                    <fullName>2nd Invoice Amt to be backed out</fullName>
                </value>
                <value>
                    <fullName>2nd Invoice Date</fullName>
                </value>
                <value>
                    <fullName>2nd Type of Invoice</fullName>
                </value>
                <value>
                    <fullName>3rd Invoice #</fullName>
                </value>
                <value>
                    <fullName>3rd Invoice Amount</fullName>
                </value>
                <value>
                    <fullName>3rd Invoice Amt to be backed out</fullName>
                </value>
                <value>
                    <fullName>3rd Invoice Date</fullName>
                </value>
                <value>
                    <fullName>3rd Type of Invoice</fullName>
                </value>
                <value>
                    <fullName>4th Invoice #</fullName>
                </value>
                <value>
                    <fullName>4th Invoice Amount</fullName>
                </value>
                <value>
                    <fullName>4th Invoice Amt to be backed out</fullName>
                </value>
                <value>
                    <fullName>4th Invoice Date</fullName>
                </value>
                <value>
                    <fullName>4th Type of Invoice</fullName>
                </value>
                <value>
                    <fullName>5th Invoice #</fullName>
                </value>
                <value>
                    <fullName>5th Invoice Amount</fullName>
                </value>
                <value>
                    <fullName>5th Invoice Amt to be backed out</fullName>
                </value>
                <value>
                    <fullName>5th Invoice Date</fullName>
                </value>
                <value>
                    <fullName>5th Type of Invoice</fullName>
                </value>
                <value>
                    <fullName>Account Management Tier</fullName>
                </value>
                <value>
                    <fullName>Account Shutdown Date</fullName>
                </value>
                <value>
                    <fullName>Account Shut Down Date</fullName>
                </value>
                <value>
                    <fullName>Account Shutdown Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Classification__c</fullName>
        <label>Error Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName># of contract years - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Events - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Leads Purchased - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Mobile Apps - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Mobile Events - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Regs/Trx - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of RFPs Committed - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Total Room night committed-Incorrec</fullName>
                </value>
                <value>
                    <fullName>Account Management Tier - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Name - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Account status - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Team - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Add'l Regs up for Renewal - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Address - Account</fullName>
                </value>
                <value>
                    <fullName>Address-Address 1</fullName>
                </value>
                <value>
                    <fullName>Address-City</fullName>
                </value>
                <value>
                    <fullName>Address - Country</fullName>
                </value>
                <value>
                    <fullName>Address - Postal Code</fullName>
                </value>
                <value>
                    <fullName>Address - State</fullName>
                </value>
                <value>
                    <fullName>Advertising Agency - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AM-CSN</fullName>
                </value>
                <value>
                    <fullName>Amended Contract</fullName>
                </value>
                <value>
                    <fullName>AM Fields at Account Level - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AM Owner - Incorrect</fullName>
                </value>
                <value>
                    <fullName>API Integration - Incorrect</fullName>
                </value>
                <value>
                    <fullName>App Card - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AR Clause - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Are you Sales Tax Exempt? - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Barter check box - Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_marked_in_Review_Checks__c</fullName>
        <label>Error marked in Review Checks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excel_Checks_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Excel Checks Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Review_Date__c</fullName>
        <label>Final Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_on_condition__c</fullName>
        <label>Follow up on condition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Force_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Functions_Impacted__c</fullName>
        <label>Functions Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bookings</fullName>
                </value>
                <value>
                    <fullName>Service Activation</fullName>
                </value>
                <value>
                    <fullName>Invoicing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Comments__c</fullName>
        <label>Implementation Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Review_ok__c</fullName>
        <label>Implementation Review OK?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Cancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Error_in_Other_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Error in Other Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hybrid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hybrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_User__c</fullName>
        <formula>$User.FirstName +' ' +$User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contract__c</fullName>
        <formula>Opportunity__r.Contract_Number_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Contract #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <formula>TEXT(Opportunity__r.Product__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>IF(ISPICKVAL( Opportunity__r.StageName, "Tract"),'Tract', 'Other')</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contract Reviews</relationshipLabel>
        <relationshipName>Contract_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Picked_for_Excel_checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Picked for Excel checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Lead_QA__c</fullName>
        <label>Process Lead QA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prateek Chopra</fullName>
                </value>
                <value>
                    <fullName>Gourav Saini</fullName>
                </value>
                <value>
                    <fullName>Ashish Babbar</fullName>
                </value>
                <value>
                    <fullName>Samridhi Rathi</fullName>
                </value>
                <value>
                    <fullName>Gaurav Keshri</fullName>
                </value>
                <value>
                    <fullName>Ankit Pandey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Lead_Quality_feedback__c</fullName>
        <label>Process Lead Quality feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Category_Tract__c</fullName>
        <formula>Opportunity__r.Product_Category_Tract__c</formula>
        <label>Product Category Tract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_to_EBS__c</fullName>
        <label>Push to EBS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not to be pushed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Condition__c</fullName>
        <label>Review Condition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Owner__c</fullName>
        <label>Review Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Sample__c</fullName>
        <label>Review Sample</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Non-Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <formula>TEXT(Opportunity__r.CFC_Check__c)</formula>
        <label>Reviewed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed_Date__c</fullName>
        <label>Reviewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewed_and_good_to_upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed and good to upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_as_an_exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reviewed as an exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer_Error_Implementation_Team__c</fullName>
        <label>Reviewer Error (Implementation Team)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName># of contract years - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Events - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Leads Purchased - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Mobile Apps - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Mobile Events - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Regs/Trx - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of RFPs Committed - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Total Room night committed-Incorrec</fullName>
                </value>
                <value>
                    <fullName># open renewal is missing</fullName>
                </value>
                <value>
                    <fullName>Account Management Tier - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Name - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Account status - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Team - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Actual Amount up for renewal - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Add'l Regs up for Renewal - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Address - Account</fullName>
                </value>
                <value>
                    <fullName>Address-Address 1</fullName>
                </value>
                <value>
                    <fullName>Address-City</fullName>
                </value>
                <value>
                    <fullName>Address - Country</fullName>
                </value>
                <value>
                    <fullName>Address - Postal Code</fullName>
                </value>
                <value>
                    <fullName>Address - State</fullName>
                </value>
                <value>
                    <fullName>Advertising Agency - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Amended Contract</fullName>
                </value>
                <value>
                    <fullName>AM Fields at Account Level - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AM Owner - Incorrect</fullName>
                </value>
                <value>
                    <fullName>API Integration - Incorrect</fullName>
                </value>
                <value>
                    <fullName>App Card - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AR Clause - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Are you Sales Tax Exempt? - Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Error__c</fullName>
        <description>Requested in Case # 08554389</description>
        <label>Error Post Processing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName># of contract years - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Events - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Leads Purchased - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Mobile Apps - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Mobile Events - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Regs/Trx - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of RFPs Committed - Incorrect</fullName>
                </value>
                <value>
                    <fullName># of Total Room night committed-Incorrec</fullName>
                </value>
                <value>
                    <fullName>Account Management Tier - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Name - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Owner</fullName>
                </value>
                <value>
                    <fullName>Account status - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Account Team - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Add'l Regs up for Renewal - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Address - Account</fullName>
                </value>
                <value>
                    <fullName>Address-Address 1</fullName>
                </value>
                <value>
                    <fullName>Address-City</fullName>
                </value>
                <value>
                    <fullName>Address - Country</fullName>
                </value>
                <value>
                    <fullName>Address - Postal Code</fullName>
                </value>
                <value>
                    <fullName>Address - State</fullName>
                </value>
                <value>
                    <fullName>Advertising Agency - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AM-CSN</fullName>
                </value>
                <value>
                    <fullName>Amended Contract</fullName>
                </value>
                <value>
                    <fullName>AM Fields at Account Level - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AM Owner - Incorrect</fullName>
                </value>
                <value>
                    <fullName>API Integration - Incorrect</fullName>
                </value>
                <value>
                    <fullName>App Card - Incorrect</fullName>
                </value>
                <value>
                    <fullName>AR Clause - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Are you Sales Tax Exempt? - Incorrect</fullName>
                </value>
                <value>
                    <fullName>Barter check box - Incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Set_Cancellation_Status__c</fullName>
        <formula>TEXT(Opportunity__r.Set_Cancellation_Status__c )</formula>
        <label>Set Cancellation Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Origin__c</fullName>
        <label>Source of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Originated</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Finance Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Review_Ok__c</fullName>
        <label>Tax Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Re-Review</fullName>
                </value>
                <value>
                    <fullName>Error Correct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Reviewer_Comments__c</fullName>
        <label>Tax Reviewer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Reviewer_Rejection_Reason__c</fullName>
        <label>Tax Reviewer Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Reviewer__c</fullName>
        <label>Tax Reviewer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rajitha Nair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Required__c</fullName>
        <label>Time Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Cancellation__c</fullName>
        <label>Type Of Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Associated__c</fullName>
        <label>Write Off Associated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_1_Agreement__c</fullName>
        <formula>VALUE(Opportunity__r.Year_1_Agreement__c)</formula>
        <label>Year 1 Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_Agreement__c</fullName>
        <formula>VALUE(Opportunity__r.Year_2_Agreement__c)</formula>
        <label>Year 2 Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_Agreement__c</fullName>
        <formula>VALUE(Opportunity__r.Year_3_Agreement__c)</formula>
        <label>Year 3 Agreement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Review</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Contract Reviewing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>Acc_Level_1_to_review</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accounting_Review_Ok__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>Acc Level 1 to review</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Accounting_Level_1_Team</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Contract_Reviewer__c</columns>
        <columns>Accounting_Team_Reviewer__c</columns>
        <columns>Accounting_Review_Ok__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Opportunity_Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accounting_Review_Ok__c</field>
            <operation>equals</operation>
            <value>Re-Review,Error Correct</value>
        </filters>
        <filters>
            <field>Accounting_Review_Ok__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Reviewing__c.Account_Team_Level_1,Contract_Reviewing__c.Account_Team_Level_1_Read_only</value>
        </filters>
        <label>Accounting Level 1 Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Accounting_Level_2_Team</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Accounting_Team_Reviewer__c</columns>
        <columns>Accounting_Review_Ok__c</columns>
        <columns>Acc_Review_Post_Rev_Rec__c</columns>
        <columns>Acc_Review_Post_Rev_Rec_OK__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acc_Review_Post_Rev_Rec_OK__c</field>
            <operation>equals</operation>
            <value>Re-Review,Error Correct</value>
        </filters>
        <filters>
            <field>Acc_Review_Post_Rev_Rec_OK__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Reviewing__c.Account_Team_Level_2,Contract_Reviewing__c.Account_Team_Level_2_Read_only</value>
        </filters>
        <label>Accounting Level 2 Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Accounting_Level_3_Team</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Accounting_Team_Reviewer__c</columns>
        <columns>Acc_Review_Post_Rev_Rec__c</columns>
        <columns>Contract_Value_50k__c</columns>
        <columns>Contract_Value_50k_review_Ok__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Value_50k_review_Ok__c</field>
            <operation>equals</operation>
            <value>Re-Review,Error Correct</value>
        </filters>
        <filters>
            <field>Contract_Value_50k_review_Ok__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Reviewing__c.Account_Team_Level_3,Contract_Reviewing__c.Account_Team_Level_3_Read_Only</value>
        </filters>
        <label>Accounting Level 3 Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Accounting_Level_4_Team</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Accounting_Team_Reviewer__c</columns>
        <columns>Acc_Review_Post_Rev_Rec__c</columns>
        <columns>Contract_Value_50k__c</columns>
        <columns>Contract_Value_100k__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Value_100k_review_Ok__c</field>
            <operation>equals</operation>
            <value>Error Correct</value>
        </filters>
        <filters>
            <field>Contract_Value_100k_review_Ok__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Reviewing__c.Account_Team_Level_4</value>
        </filters>
        <label>Accounting Level 4 Team</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Canx_Acc_Level_2</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Canx_Accounting_Team_Level_2_Reviewer__c</columns>
        <columns>Canx_Accounting_Team_Level_2_Review_OK__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contract_Reviewing__c.Acc_Level_2_Cancel</value>
        </filters>
        <filters>
            <field>Canx_Accounting_Team_Level_2_Review_OK__c</field>
            <operation>equals</operation>
            <value>Re-Review,Error Correct</value>
        </filters>
        <filters>
            <field>Canx_Accounting_Team_Level_2_Review_OK__c</field>
            <operation>equals</operation>
        </filters>
        <label>Canx Acc Level 2</label>
        <language>en_US</language>
    </listViews>
</CustomObject>